--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,10 +56,20 @@ dependencies {
     // If you want to use the GPU Filters
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
 
+
+    // location play services
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+
     //GoogleMaps API dependency
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation "com.google.android.gms:play-services-maps:$googlePlayVersion"
     implementation "com.google.android.gms:play-services-location:$googlePlayVersion"
+
+    //Permission dependencies
     implementation "org.permissionsdispatcher:permissionsdispatcher:$permissionDispatcherVersion"
     annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:$permissionDispatcherVersion"
+
+    //Google Play SDK
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 }
