--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     //Photoview dependency
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
+
+    //Material design
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 }
