--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
     //Material design
     implementation 'com.google.android.material:material:1.3.0-alpha02'
+
+    //Places
+    implementation 'com.google.android.libraries.places:places:2.3.0'
 }
