--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,8 @@ dependencies {
 
     //Places
     implementation 'com.google.android.libraries.places:places:2.3.0'
+
+    //Picasso dependency
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
